--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,12 @@
 	font-family: "nunito sans", sans-serif;
 	margin: 0;
 	padding: 0;
+	-webkit-tap-highlight-color: transparent;
 }
 
 .section {
 	background-color: #d0e5f9;
+	width: 100%;
 }
 
 .container {
