--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Nunito+Sans:wght@400;700&display=swap');
+
 * {
-	font-family: "nunito sans", sans-serif;
+	font-family: "Nunito Sans", sans-serif;
 	margin: 0;
 	padding: 0;
 	-webkit-tap-highlight-color: transparent;
@@ -18,7 +20,7 @@
 }
 
 .tag {
-	font-weight: 900;
+	font-weight: 700;
 	font-size: 12px;
 	line-height: 1;
 	color: #167edf;
@@ -32,7 +34,7 @@
 }
 
 .heading1 {
-	font-family: "dm sans", sans-serif;
+	font-family: "DM Sans", sans-serif;
 	font-weight: 700;
 	font-size: 24px;
 	line-height: 1.3;
@@ -109,6 +111,9 @@
 	width: 100%;
 	height: 48px;
 	padding: 12px;
+	font-size: 14px;
+	line-height: 1;
+	color: #303030;
 }
 
 .input-text:focus {
