--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,13 @@
 	font-family: "Nunito Sans", sans-serif;
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 	-webkit-tap-highlight-color: transparent;
+	-webkit-transition: .5s ease-out;
+	transition: .5s ease-out;
 }
+
+/* sections, containers & groups */
 
 .section {
 	background-color: #d0e5f9;
@@ -12,61 +17,52 @@
 
 .container {
 	margin: 0 auto;
-	padding: 40px 0;
 	max-width: 478px;
 	background-color: white;
 }
 
-.tag {
-	font-weight: 700;
-	font-size: 12px;
-	line-height: 1;
-	color: #167edf;
-	text-transform: uppercase;
-	letter-spacing: 1.2px;
-	background: #d0e5f9;
-	padding: 6px;
-	border-radius: 4px;
-	display: inline-block;
-	margin: 0 20px;
-}
-
-.heading1 {
-	font-family: "DM Sans", sans-serif;
-	font-weight: 700;
-	font-size: 24px;
-	line-height: 1.3;
-	color: #fc443c;
-	margin: 0 20px 40px;
-}
-
-.section-title {
-	font-weight: 700;
-	font-size: 16px;
-	line-height: 32px;
-	color: #303030;
-	margin: 20px 20px;
-	display: flex;
-	justify-content: space-between;
-}
-
-.section-content {
+.section-container {
 	background-color: #fbfbfb;
-	/* border-radius: 8px; */
 }
 
 .section-group {
 	padding: 20px;
 }
 
-.bb1 {
-	border-bottom: 1px solid #f0f0f0;
+.section-grid {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 20px;
+}
+
+.toggle-group {
+	display: flex;
+	gap: 12px;
+	align-items: center;
+}
+
+.slider-group {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+/* text */
+
+.section-title {
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 32px;
+	color: #303030;
+	padding: 20px;
+	display: flex;
+	justify-content: space-between;
 }
 
 .content-title {
 	font-weight: 700;
 	font-size: 12px;
-	line-height: 1.3;
+	line-height: 24px;
 	letter-spacing: 1.2px;
 	text-transform: uppercase;
 	color: #707070;
@@ -74,8 +70,142 @@
 
 .content-label {
 	font-size: 14px;
-	line-height: 1;
+	line-height: 24px;
 	color: #707070;
+}
+
+.content-total {
+	font-weight: 700;
+	font-size: 12px;
+	line-height: 24px;
+	letter-spacing: 1.2px;
+	text-transform: uppercase;
+	color: #707070;
+}
+
+.input-text {
+	border: 2px solid #f0f0f0;
+	border-radius: 8px;
+	width: 100%;
+	height: 48px;
+	padding: 12px;
+	font-size: 14px;
+	line-height: 24px;
+	color: #303030;
+}
+
+.input-text:focus {
+	border-color: #167edf;
+	outline: none;
+}
+
+.content-display {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 24px;
+	color: #303030;
+}
+
+.caption-container {
+	display: flex;
+	justify-content: space-between;
+	font-size: 14px;
+	line-height: 24px;
+	color: #b0b0b0;
+}
+
+/* teste */
+
+.teste {
+	position: relative;
+	display: inline-block;
+	width: 144px;
+	height: 32px;
+}
+
+.teste input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+
+/* teste track */
+
+.teste-slider {
+	cursor: pointer;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #f0f0f0;
+	border-radius: 100px;
+	padding: 0 16px 0 40px;
+	font-weight: 700;
+	font-size: 12px;
+	line-height: 32px;
+	letter-spacing: 1.2px;
+	text-transform: uppercase;
+	color: #707070;
+	display: flex;
+	align-items: center;
+	/* -webkit-transition: .5s ease-out; */
+	/* transition: .5s ease-out; */
+}
+
+input:checked + .teste-slider {
+	padding: 0 40px 0 16px;
+	color: #167edf;
+	background-color: #d0e5f9;
+}
+
+/* teste thumb */
+
+.teste-slider:before {
+	content: "";
+	width: 24px;
+	height: 24px;
+	position: absolute;
+	left: 4px;
+	border-radius: 100px;
+	background-color: white;
+	box-shadow: 0 2px 4px rgba(0,0,0,.2);
+	/* -webkit-transition: .5s ease-out; */
+	/* transition: .5s ease-out; */
+	z-index: 9;
+}
+
+input:checked + .teste-slider:before {
+	/* left: auto; */
+	/* right: 4px; */
+	background-color: #167edf;
+	-webkit-transform: translateX(112px);
+	-ms-transform: translateX(112px);
+	transform: translateX(112px);
+}
+
+/* teste label */
+
+.teste-slider .off {
+	display: inline;
+}
+
+.teste-slider .on {
+	display: none;
+}
+
+input:checked + .teste-slider .off {
+	display: none;
+}
+
+input:checked + .teste-slider .on {
+	display: inline;
+}
+
+/*  */
+
+.bb1 {
+	border-bottom: 1px solid #f0f0f0;
 }
 
 .mb4 {
@@ -94,137 +224,57 @@
 	margin-bottom: 20px;
 }
 
-.content-total {
-	font-weight: 700;
-	font-size: 12px;
-	line-height: 1;
-	letter-spacing: 1.2px;
-	text-transform: uppercase;
-	color: #707070;
-}
-
-.input-text {
-	border: 2px solid #f0f0f0;
-	border-radius: 8px;
-	width: 100%;
-	height: 48px;
-	padding: 12px;
-	font-size: 14px;
-	line-height: 1;
-	color: #303030;
-}
-
-.input-text:focus {
-	border-color: #167edf;
-	outline: none;
-}
-
-.toggle-group {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-
-.slider-group {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-}
-
-.content-display {
-	font-weight: 700;
-	font-size: 14px;
-	line-height: 24px;
-	color: #303030;
-}
-
-.caption-container {
-	display: flex;
-	justify-content: space-between;
-	font-size: 14px;
-	line-height: 24px;
-	color: #b0b0b0;
-}
-
 /* toggle switch - https://www.w3schools.com/howto/howto_css_switch.asp */
 
 .toggle {
-  position: relative;
-  display: inline-block;
-  width: 56px;
-  height: 32px;
+	position: relative;
+	display: inline-block;
+	width: 56px;
+	height: 32px;
 }
-
-/* hide default checkbox */
 
 .toggle input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+	opacity: 0;
+	width: 0;
+	height: 0;
 }
-
-/* switch - track */
 
 .toggle-slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #f0f0f0;
-  -webkit-transition: .5s;
-  transition: .5s;
-  border-radius: 100px;
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #f0f0f0;
+	/* -webkit-transition: .5s ease-out; */
+	/* transition: .5s ease-out; */
+	border-radius: 100px;
 }
-
-.toggle-slider:hover {
-	background-color: #167edf;
-}
-
-/* switch - thumb */
 
 .toggle-slider:before {
-  position: absolute;
-  content: "";
-  height: 24px;
-  width: 24px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .5s;
-  transition: .5s;
-  border-radius: 100px;
-  box-shadow: 0 2px 4px rgba(0,0,0,.2);
+	position: absolute;
+	content: "";
+	height: 24px;
+	width: 24px;
+	left: 4px;
+	bottom: 4px;
+	background-color: white;
+	/* -webkit-transition: .5s ease-out; */
+	/* transition: .5s ease-out; */
+	border-radius: 100px;
+	box-shadow: 0 2px 4px rgba(0,0,0,.2);
 }
-
-/* switch - active */
 
 input:checked + .toggle-slider {
-  background-color: #d0e5f9;
+	background-color: #d0e5f9;
 }
 
 input:checked + .toggle-slider:before {
 	background-color: #167edf;
-  }
-
-/* switch - focus */
-
-input:focus + .toggle-slider {
-	background-color: #167edf;
-	/* box-shadow: 0 2px 4px rgba(0,0,0,.2); */
-}
-
-input:focus + .toggle-slider:before {
-	background-color: white;
-}
-
-/* switch - animation */
-
-input:checked + .toggle-slider:before {
-  -webkit-transform: translateX(24px);
-  -ms-transform: translateX(24px);
-  transform: translateX(24px);
+	-webkit-transform: translateX(24px);
+	-ms-transform: translateX(24px);
+	transform: translateX(24px);
 }
 
 /* slider - https://www.w3schools.com/howto/howto_js_rangeslider.asp */
@@ -244,16 +294,8 @@ input:checked + .toggle-slider:before {
 	border-radius: 100px;
 	background-color: #d0e5f9;
 	outline: none;
-	-webkit-transition: .5s;
-	transition: .5s;
-}
-
-.slider:hover {
-	background-color: #167edf;
-}
-
-.slider:focus {
-	background-color: #167edf;
+	/* -webkit-transition: .5s ease-out; */
+	/* transition: .5s ease-out; */
 }
 
 .slider::-webkit-slider-thumb {
@@ -265,8 +307,8 @@ input:checked + .toggle-slider:before {
 	background-color: #167edf;
 	box-shadow: 0 2px 4px rgba(0,0,0,.2);
 	cursor: pointer;
-	-webkit-transition: .5s;
-	transition: .5s;
+	/* -webkit-transition: .5s ease-out; */
+	/* transition: .5s ease-out; */
 }
 
 .slider::-moz-range-thumb {
@@ -276,22 +318,8 @@ input:checked + .toggle-slider:before {
 	background-color: white;
 	box-shadow: 0 2px 4px rgba(0,0,0,.2);
 	cursor: pointer;
-	-webkit-transition: .5s;
-	transition: .5s;
+	/* -webkit-transition: .5s ease-out; */
+	/* transition: .5s ease-out; */
 }
 
-.slider:hover::-webkit-slider-thumb {
-	background-color: white;
-}
-
-.slider:hover::-moz-range-thumb {
-	background-color: white;
-}
-
-.slider:focus::-webkit-slider-thumb {
-	background-color: white;
-}
-
-.slider:focus::-moz-range-thumb {
-	background-color: white;
-}
+/*  */
