--- a/OLD_styles.css
+++ b/OLD_styles.css
@@ -6,10 +6,91 @@
 	-webkit-tap-highlight-color: transparent;
 }
 
+/* sections, containers & groups */
+
+.section {
+	background-color: #d0e5f9;
+	width: 100%;
+}
+
+.container {
+	margin: 0 auto;
+	max-width: 478px;
+	background-color: white;
+}
+
+.section-container {
+	background-color: #fbfbfb;
+}
+
+.section-group {
+	padding: 20px;
+}
+
+.section-grid {
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 20px;
+}
+
 .toggle-group {
 	display: flex;
 	gap: 12px;
 	align-items: center;
+}
+
+.slider-group {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+/* text */
+
+.section-title {
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 32px;
+	color: #303030;
+	padding: 20px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.content-title {
+	font-weight: 700;
+	font-size: 12px;
+	line-height: 24px;
+	letter-spacing: 1.2px;
+	text-transform: uppercase;
+	color: #707070;
+}
+
+.content-label {
+	font-size: 14px;
+	line-height: 24px;
+	color: #707070;
+}
+
+.content-total {
+	font-weight: 700;
+	font-size: 12px;
+	line-height: 24px;
+	letter-spacing: 1.2px;
+	text-transform: uppercase;
+	color: #707070;
+}
+
+.input-text {
+	border: 2px solid #f0f0f0;
+	border-radius: 8px;
+	width: 100%;
+	height: 48px;
+	padding: 12px;
+	font-size: 14px;
+	line-height: 24px;
+	color: #303030;
 }
 
 .input-text:focus {
@@ -17,19 +98,27 @@
 	outline: none;
 }
 
-/* teste */
+.content-display {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 24px;
+	color: #303030;
+}
 
-/*
-	TESTE
-	1. track
-	2. thumb
-	3. label
-*/
+.caption-container {
+	display: flex;
+	justify-content: space-between;
+	font-size: 14px;
+	line-height: 24px;
+	color: #b0b0b0;
+}
+
+/* teste */
 
 .teste {
 	position: relative;
 	display: inline-block;
-	width: 180px;
+	width: 150px;
 	height: 32px;
 }
 
@@ -89,9 +178,9 @@ input:checked + .teste-slider:before {
 	/* left: auto; */
 	/* right: 4px; */
 	background-color: #167edf;
-	-webkit-transform: translateX(148px);
-	-ms-transform: translateX(148px);
-	transform: translateX(148px);
+	-webkit-transform: translateX(118px);
+	-ms-transform: translateX(118px);
+	transform: translateX(118px);
 }
 
 /* teste label */
@@ -116,14 +205,10 @@ input:checked + .teste-slider .on {
 	display: inline;
 }
 
-/* bootstrap-like */
+/*  */
 
 .bb1 {
 	border-bottom: 1px solid #f0f0f0;
-}
-
-.bb2 {
-	border-bottom: 2px solid #f0f0f0;
 }
 
 .mb4 {
@@ -242,14 +327,16 @@ input:disabled + .toggle-slider:before {
 	cursor: pointer;
 }
 
-.slider {
+.slider:disabled {
 	background-color: #f0f0f0;
 }
 
-.slider::-webkit-slider-thumb {
+.slider:disabled::-webkit-slider-thumb {
 	background-color: #f0f0f0;
 }
 
-.slider::-moz-range-thumb {
+.slider:disabled::-moz-range-thumb {
 	background-color: #f0f0f0;
 }
+
+/*  */
