--- a/subtract-styles.css
+++ b/subtract-styles.css
@@ -6,13 +6,13 @@
 	-webkit-tap-highlight-color: transparent;
 }
 
-.toggle-group {
+.tbc-toggle-group {
 	display: flex;
 	gap: 12px;
 	align-items: center;
 }
 
-.input-text:focus {
+.tbc-input-text:focus {
 	border-color: #167edf;
 	outline: none;
 }
@@ -26,14 +26,14 @@
 	3. label
 */
 
-.teste {
+.tbc-teste {
 	position: relative;
 	display: inline-block;
 	width: 180px;
 	height: 32px;
 }
 
-.teste input {
+.tbc-teste input {
 	opacity: 0;
 	width: 0;
 	height: 0;
@@ -41,7 +41,7 @@
 
 /* teste track */
 
-.teste-slider {
+.tbc-teste-slider {
 	cursor: pointer;
 	position: absolute;
 	top: 0;
@@ -63,7 +63,7 @@
 	transition: .5s ease-out;
 }
 
-input:checked + .teste-slider {
+input:checked + .tbc-teste-slider {
 	padding: 0 40px 0 16px;
 	color: #167edf;
 	background-color: #d0e5f9;
@@ -71,7 +71,7 @@ input:checked + .teste-slider {
 
 /* teste thumb */
 
-.teste-slider:before {
+.tbc-teste-slider:before {
 	content: "";
 	width: 24px;
 	height: 24px;
@@ -85,7 +85,7 @@ input:checked + .teste-slider {
 	z-index: 9;
 }
 
-input:checked + .teste-slider:before {
+input:checked + .tbc-teste-slider:before {
 	/* left: auto; */
 	/* right: 4px; */
 	background-color: #167edf;
@@ -96,68 +96,68 @@ input:checked + .teste-slider:before {
 
 /* teste label */
 
-.teste-slider .off {
+.tbc-teste-slider .off {
 	display: inline;
 	width: 100%;
 	text-align: center;
 }
 
-.teste-slider .on {
+.tbc-teste-slider .on {
 	display: none;
 	width: 100%;
 	text-align: center;
 }
 
-input:checked + .teste-slider .off {
+input:checked + .tbc-teste-slider .off {
 	display: none;
 }
 
-input:checked + .teste-slider .on {
+input:checked + .tbc-teste-slider .on {
 	display: inline;
 }
 
 /* bootstrap-like */
 
-.bb1 {
+.tbc-bb1 {
 	border-bottom: 1px solid #f0f0f0;
 }
 
-.bb2 {
+.tbc-bb2 {
 	border-bottom: 2px solid #f0f0f0;
 }
 
-.mb4 {
+.tbc-mb4 {
 	margin-bottom: 4px;
 }
 
-.mb8 {
+.tbc-mb8 {
 	margin-bottom: 8px;
 }
 
-.mb12 {
+.tbc-mb12 {
 	margin-bottom: 12px;
 }
 
-.mb20 {
+.tbc-mb20 {
 	margin-bottom: 20px;
 }
 
 /* toggle switch - https://www.w3schools.com/howto/howto_css_switch.asp */
 
-.toggle {
+.tbc-toggle {
 	position: relative;
 	display: inline-block;
 	width: 56px;
 	height: 32px;
 }
 
-.toggle input {
+.tbc-toggle input {
 	opacity: 0;
 	width: 0;
 	height: 0;
 }
 
-.toggle-slider {
+.tbc-toggle-slider {
 	position: absolute;
 	cursor: pointer;
 	top: 0;
@@ -170,7 +170,7 @@ input:checked + .teste-slider .on {
 	border-radius: 100px;
 }
 
-.toggle-slider:before {
+.tbc-toggle-slider:before {
 	position: absolute;
 	content: "";
 	height: 24px;
@@ -184,35 +184,35 @@ input:checked + .teste-slider .on {
 	box-shadow: 0 2px 4px rgba(0,0,0,.2);
 }
 
-input:checked + .toggle-slider {
+input:checked + .tbc-toggle-slider {
 	background-color: #d0e5f9;
 }
 
-input:checked + .toggle-slider:before {
+input:checked + .tbc-toggle-slider:before {
 	background-color: #167edf;
 	-webkit-transform: translateX(24px);
 	-ms-transform: translateX(24px);
 	transform: translateX(24px);
 }
 
-input:disabled + .toggle-slider {
+input:disabled + .tbc-toggle-slider {
 	opacity: .25;
 }
 
-input:disabled + .toggle-slider:before {
+input:disabled + .tbc-toggle-slider:before {
 	background-color: #f0f0f0;
 }
 
 /* slider - https://www.w3schools.com/howto/howto_js_rangeslider.asp */
 
-.slider-container {
+.tbc-slider-container {
 	width: 100%;
 	height: 24px;
 	display: flex;
 	align-items: center;
 }
 
-.slider {
+.tbc-slider {
 	-webkit-appearance: none;
 	appearance: none;
 	width: 100%;
@@ -222,7 +222,7 @@ input:disabled + .toggle-slider:before {
 	outline: none;
 }
 
-.slider::-webkit-slider-thumb {
+.tbc-slider::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	appearance: none;
 	width: 24px;
@@ -233,7 +233,7 @@ input:disabled + .toggle-slider:before {
 	cursor: pointer;
 }
 
-.slider::-moz-range-thumb {
+.tbc-slider::-moz-range-thumb {
 	width: 24px;
 	height: 24px;
 	border-radius: 100px;
@@ -242,14 +242,14 @@ input:disabled + .toggle-slider:before {
 	cursor: pointer;
 }
 
-.slider:disabled {
+.tbc-slider:disabled {
 	background-color: #f0f0f0;
 }
 
-.slider:disabled::-webkit-slider-thumb {
+.tbc-slider:disabled::-webkit-slider-thumb {
 	background-color: #f0f0f0;
 }
 
-.slider:disabled::-moz-range-thumb {
+.tbc-slider:disabled::-moz-range-thumb {
 	background-color: #f0f0f0;
 }
