--- a/subtract-styles.css
+++ b/subtract-styles.css
@@ -53,7 +53,7 @@
 	padding: 0 16px 0 40px;
 	font-weight: 700;
 	font-size: 12px;
-	line-height: 32px;
+	line-height: 1;
 	letter-spacing: 1.2px;
 	text-transform: uppercase;
 	color: #707070;
